--- a/templates/base.html
+++ b/templates/base.html
@@ -59,20 +59,19 @@
 </head>
 
 <body>
-<a href="tel:09123456789" class="contact-floating">
+        {% if setting.call %}
+<a href="tel:{{ setting.call }}" class="contact-floating">
     <div class="icon">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <path fill="white" d="M6.62 10.79a15.053 15.053 0 006.59 6.59l2.2-2.2a1 1 0 011.01-.24c1.12.37 2.33.57 3.58.57a1 1 0 011 1V21a1 1 0 01-1 1C10.3 22 2 13.7 2 3a1 1 0 011-1h4.5a1 1 0 011 1c0 1.25.2 2.46.57 3.58a1 1 0 01-.25 1.01l-2.2 2.2z"/>
         </svg>
     </div>
-
     <div class="text">
         <span class="title">تماس سریع</span>
-        {% if setting.call %}
         <span class="number">{{ setting.call }}</span>
-        {% endif %}
     </div>
 </a>
+        {% endif %}
 
 
     <!-- Header area start here -->
