--- a/core/templates/home/index.html
+++ b/core/templates/home/index.html
@@ -8,7 +8,7 @@
 {% block content %}
 
                 <!-- Banner area start here -->
-            <section class="banner-four-area bg-image" data-background="{% static 'images/bg/petro-banner-bg.png' %}">
+            <section class="banner-four-area bg-image" style="background-image: url({% static 'images/bg/petro-banner-bg.png' %})">
                 <div class="banner-four__line">
                     <img src="{% static 'images/shape/banner-four-arrow.png' %}" alt="image" loading="lazy">
                 </div>
