--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7047,7 +7047,7 @@ body.ltr .contact__item-left * {
     align-items: center;
     justify-content: center;
     border: none;
-    margin-right: 120px;
+    /*margin-right: 2px;*/
   }
 
   .search-form {
@@ -7058,4 +7058,66 @@ body.ltr .contact__item-left * {
     display: flex !important;
   }
 }
+
+.language-switcher {
+  position: relative;
+  display: flex;
+  align-items: center;
+  background-color: #f3f3fc;
+  border-radius: 12px;
+  padding: 6px 12px;
+  width: 100px;
+  height: 45px;
+  direction: rtl;
+}
+
+.language-switcher select {
+  appearance: none;
+  border: none;
+  outline: none;
+  background: transparent;
+  font-family: var(--inter);
+  font-size: 14px;
+  color: var(--primary-color);
+  cursor: pointer;
+  padding: 4px 24px 4px 8px;
+  direction: rtl;
+}
+
+.language-switcher::after {
+  content: "▾";
+  position: absolute;
+  left: 10px;
+  font-size: 12px;
+  color: var(--primary-color);
+  pointer-events: none;
+  transition: transform 0.3s ease;
+}
+
+.language-switcher:hover::after {
+  transform: rotate(180deg);
+}
+
+@media (max-width: 768px) {
+
+  .language-switcher {
+    width: auto;
+    height: auto;
+    padding: 0;
+    margin-right: 80px; /* فاصله خیلی کم */
+    background: transparent !important;
+    border: none;
+  }
+
+  .language-switcher select {
+    font-size: 12px;
+    padding: 0;
+    height: auto;
+  }
+
+  .language-switcher::after {
+    display: none;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
